<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Click!</string>
    <string name="action_settings">Settings</string>
    <string name="button_newgame">New Game</string>
    <string name="button_highscore">High Score</string>
    <string name="button_quit">Quit</string>
    <string name="button_clickbutton_up">Click it!</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="initial_clicks">Clicks: 0</string>
    <string name="click_to_begin">Click quick!</string>
    <string name="dialog_gameOver">Game over</string>
    <string name="dialog_highScore">High Score</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_newGame">New game</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="admob_insertitial_id">ca-app-pub-4043849132226838/3728744301</string>
    <string name="admob_banner_id">ca-app-pub-4043849132226838/4324173506</string>
    <string name="analytics_dialog_newgame"/>

</resources>