<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:click="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jakebarnby.click.GameActivity"
    tools:ignore="MergeRootFrame" >

    <ImageButton
        android:id="@+id/button_clickbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="235dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_clickbutton_up"
        android:onClick="updateCount"
        android:src="@layout/clickbutton_background_selector" />

    <jakebarnby.click.MyFontTextView
        android:id="@+id/textView_clickcount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:gravity="center_horizontal"
        android:text="@string/initial_clicks"
        android:textColor="@color/black"
        android:textSize="40sp"
        click:fontName="freescript.ttf" />

    <jakebarnby.click.MyFontTextView
        android:id="@+id/textView_timer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/click_to_begin"
        android:textColor="@color/black"
        android:textSize="65sp"
        click:fontName="freescript.ttf" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_id" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/white" />
    </LinearLayout>

</RelativeLayout>